Selectstart is not fired when selection was created by arrow keys. https://bugs.webkit.org/show_bug.cgi?id=60430

Patch by Arko Saha <arko@motorola.com> on 2011-09-12
Reviewed by Ryosuke Niwa.

Source/WebCore:

Fire selectstart when a user starts extending the selection using arrow key.
Fixed by Arko Saha  <arko@motorola.com> and Kaustubh Atrawalkar  <kaustubh@motorola.com>

Tests: fast/events/selectstart-by-arrow-keys-prevent-default.html
       fast/events/selectstart-by-arrow-keys.html

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::modify):
(WebCore::FrameSelection::shouldChangeSelection):
(WebCore::FrameSelection::dispatchSelectStart):
* editing/FrameSelection.h:

LayoutTests:

* fast/events/selectstart-by-arrow-keys-expected.txt: Added.
* fast/events/selectstart-by-arrow-keys-prevent-default-expected.txt: Added.
* fast/events/selectstart-by-arrow-keys-prevent-default.html: Added.
* fast/events/selectstart-by-arrow-keys.html: Added.

Canonical link: https://commits.webkit.org/83852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94966 268f45cc-cd09-0410-ab3c-d52691b4dbfc